--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -17,7 +17,7 @@
   <mat-grid-tile colspan="2">
   <mat-card  class="view_card">
   <mat-card-header >
-  <mat-card-title>Shiba Inu</mat-card-title>
+  <mat-card-title class="test">Shiba Inu</mat-card-title>
   <mat-card-subtitle>Dog Breed</mat-card-subtitle>
   </mat-card-header>
   <mat-card-content>
